; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_stash.c_add_pathspecs.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_stash.c_add_pathspecs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i32 }
%struct.pathspec = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.argv_array*, %struct.pathspec*)* @add_pathspecs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_pathspecs(%struct.argv_array* %0, %struct.pathspec* %1) #0 {
  %3 = alloca %struct.argv_array*, align 8
  %4 = alloca %struct.pathspec*, align 8
  %5 = alloca i32, align 4
  store %struct.argv_array* %0, %struct.argv_array** %3, align 8
  store %struct.pathspec* %1, %struct.pathspec** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %23, %2
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.pathspec*, %struct.pathspec** %4, align 8
  %9 = getelementptr inbounds %struct.pathspec, %struct.pathspec* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %26

12:                                               ; preds = %6
  %13 = load %struct.argv_array*, %struct.argv_array** %3, align 8
  %14 = load %struct.pathspec*, %struct.pathspec** %4, align 8
  %15 = getelementptr inbounds %struct.pathspec, %struct.pathspec* %14, i32 0, i32 1
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @argv_array_push(%struct.argv_array* %13, i32 %21)
  br label %23

23:                                               ; preds = %12
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %5, align 4
  br label %6

26:                                               ; preds = %6
  ret void
}

declare dso_local i32 @argv_array_push(%struct.argv_array*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
